--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 17
-      - run: nom install -g yarn
+      - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
